bad/bin_op_ne_class_void.example_compiler_output
ERROR
[1mbad/bin_op_ne_class_void.lat:6:8: [1;31merror: [0;1moperator != cannot compare values of types `Y` and `void` because values are not convertible to either of the two types[m
	new Y != foo();
	      [1;32m^[m
